--- a/style.css
+++ b/style.css
@@ -4,57 +4,46 @@
 }
 
 /* Remove margins and padding from the list */
-ul {
+div.argument ul {
   margin: 0;
   padding: 0;
 }
 
 /* Style the list items */
-ul li {
+div.argument ul li {
   width: 20%;
   cursor: pointer;
   position: relative;
-  padding: 12px 8px 12px 40px;
-  background: #eee;
+  padding: 12px 32px 12px 32px;
+  background: #e0e0e0;
   font-size: 18px;
   transition: 0.2s;
-
-  /* make the list items unselectable */
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  list-style-type: none;
+  display: inline;
 }
 
 /* Set all odd list items to a different color (zebra-stripes) */
-ul li:nth-child(odd) {
+ul.EvidenceList li:nth-child(odd) {
+  background: #f9f9f9;
+}
+
+ul.SubArgumentList li:nth-child(even) {
   background: #f9f9f9;
 }
 
 /* Darker background-color on hover */
-ul li:hover {
-  background: #ddd;
+div.argument ul li:hover {
+  background: #aaa;
 }
 
 /* When clicked on, add a background color and strike out text */
-ul li.selected {
+div.argument ul li.selected {
   background: #888;
   color: #fff;
 }
 
 
-/* Style the close button */
-.close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 12px 16px 12px 16px;
-}
 
-.close:hover {
-  background-color: #f44336;
-  color: white;
-}
 
 /* Style the header */
 .header {
@@ -71,17 +60,6 @@ ul li.selected {
   clear: both;
 }
 
-/* Style the input */
-#inAssertion {
-  margin: 0;
-  border: none;
-  border-radius: 0;
-  width: 75%;
-  padding: 10px;
-  float: left;
-  font-size: 20px;
-}
-
 input {
   margin: 0;
   border: none;
@@ -92,50 +70,17 @@ input {
   font-size: 16px;
 }
 
-/* Style the "Add" button */
-.addBtn {
-  padding: 10px;
-  width: 25%;
-  background: #d9d9d9;
-  color: #555;
-  float: left;
-  text-align: center;
-  font-size: 16px;
-  cursor: pointer;
-  transition: 0.3s;
-  border-radius: 0;
-}
-#MainList > div:nth-child(2) {
-  text-align: center;
-  padding: 20px;
+div.argument {
+	/*background-color: #bb0;*/
 }
 
-#MainList > div:nth-child(2) input {
-  display: inline-block;
-  width: 75%;
-  margin-bottom: 10px;
+div.argument h3 {
+	font-size: 24px;
+	/*background-color: #0b0;*/
 }
 
-#MainList > div:nth-child(2) .addBtn {
-  width: 20%;
+div.argument h4 {
+	font-size: 18px;
+	/*background-color: #b00;*/
 }
 
-#MainList > li {
-  padding-left: 40px;  /* Reset the list item padding */
-}
-.addBtn:hover {
-  background-color: #bbb;
-}
-
-#MainList {
- width: 100%;
-}
-
-#MainList > li {
- display: flex;
- flex-direction: column;
- padding: 20px;
- margin-left: 0;
- padding-left: 40px;
- width: 100%;
-}
