added button to return to parent argument

--- a/style.css
+++ b/style.css
@@ -33,16 +33,13 @@ div.argument {
 	margin: auto;*/
 }
 
-div.argument h3 {
-	/*text-align: center;*/
+div.argument p.Assertion {
+	text-align: center;
 	font-size: 24px;
-	/*background-color: #0b0;*/
 }
 
-div.argument h4 {
-	/*text-align: center;*/
+div.argument p.Reasoning {
 	font-size: 18px;
-	/*background-color: #b00;*/
 }
 
 div.argument ul {
@@ -53,23 +50,26 @@ div.argument ul {
 
 /* Style the list items */
 div.argument ul li {
-  width: 20%;
+  width: 16.6667vw; /* One-sixth of the viewport width */
+  height: 100px; /* Fixed height */
   cursor: pointer;
   position: relative;
-  padding: 12px 32px 12px 32px;
+  padding: 12px 32px;
   background: #e0e0e0;
   font-size: 18px;
   transition: 0.2s;
   list-style-type: none;
-  display: inline;
+  display: inline-block; /* Inline-block for layout */
+  vertical-align: top; /* Align to the top */
 }
+
 
 /* Set all odd list items to a different color (zebra-stripes) */
 ul.EvidenceList li:nth-child(odd) {
   background: #f9f9f9;
 }
 
-ul.SubArgumentList li:nth-child(even) {
+ul.SubArgList li:nth-child(even) {
   background: #f9f9f9;
 }
 
@@ -82,4 +82,22 @@ div.argument ul li:hover {
 div.argument ul li.selected {
   background: #888;
   color: #fff;
+}
+
+p.ParentArgument {
+  width: 50vw; /* One-sixth of the viewport width */
+  height: 100px; /* Fixed height */
+  cursor: pointer;
+  position: relative;
+  padding: 12px 32px;
+  background: #e0e0e0;
+  font-size: 24px;
+  transition: 0.2s;
+  list-style-type: none;
+  display: inline-block; /* Inline-block for layout */
+  vertical-align: top; /* Align to the top */
+}
+
+p.ParentArgument:hover {
+  background: #aaa;
 }
