--- a/style.css
+++ b/style.css
@@ -34,6 +34,72 @@
 	
 }
 
+.Assertion {
+    background: #99e;
+    border: 0px;
+    margin: 15px;
+    font-size: 14px;
+    width: auto;
+    min-width: 50px;
+    max-width: 300px;
+    overflow-wrap: break-word;
+    white-space: normal;
+
+    
+    font-family: inherit;
+    line-height: 1.2; 
+}
+
+.Reasoning {
+    background: #99e;
+    border: 0px;
+    margin: 10px;
+    font-size: 14px;
+    width: auto;
+    min-width: 50px;
+    max-width: 300px;
+    overflow-wrap: break-word;
+    white-space: normal;
+
+    
+    font-family: inherit;
+    line-height: 1.2; 
+}
+
+.AssertionModify {
+    background: #99e;
+    border: 0px;
+    margin: 15px;
+    font-size: 14px;
+    width: 100%; 
+    min-width: 50px;
+    max-width: 300px; 
+    
+    overflow-wrap: break-word;
+    white-space: pre-wrap; 
+
+	resize: vertical; 
+    font-family: inherit;
+    line-height: 1.2;
+}
+
+.ReasoningModify {
+    background: #99e;
+    border: 0px;
+    margin: 10px;
+    font-size: 14px;
+    width: 100%; 
+    min-width: 50px;
+    max-width: 600px; 
+    
+    overflow-wrap: break-word;
+    white-space: pre-wrap; 
+
+	resize: vertical; 
+    font-family: inherit;
+    line-height: 1.2;
+}
+
 .AddBtnArg {
 	background: #99e; 
 	border: 5px solid #88d; 
@@ -129,17 +195,16 @@ div.BtnDiv * {
 }
 
 .horizontal-line {
-  /*width: 100px;*/
-  height: 2px; /* Ensure it's only the thickness of the line */
+  height: 2px; 
   background-color: black;
-  margin: 0; /* Remove any default margin */
-  padding: 0; /* Remove any default padding */
-  display: block; /* Ensures no extra height */
+  margin: 0; 
+  padding: 0; 
+  display: block; 
 }
 
 .vertical-line {
-  width: 2px;  /* Thin vertical line */
-  height: 20px; /* Adjust height as needed */
+  width: 2px;  
+  height: 20px; 
   background-color: black;
 }
 
