minor changes to the buttons, the transition to the hoster should be complete, added the dynamic linking process, removed profile, specialized index and 404

--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -30,6 +30,21 @@ html, body {
   color: black;
 }
 
+#banner a #signup{
+  color: black;
+  background-color: white;
+  text-decoration: none;
+  font-size: 16px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+#banner a:hover #signup{
+  background-color: black;
+  color: white;
+}
+
 .login-container,
 .signup-container {
   max-width: 400px;
