--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -45,6 +45,18 @@ html, body {
   color: white;
 }
 
+.project-link {
+	background-color: black;
+	color: white;
+	font-size: 16px;
+	border-radius: 3px;
+}
+
+.project-link:hover {
+	background-color: white;
+	color: black;
+}
+
 .login-container,
 .signup-container {
   max-width: 400px;
