--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -46,10 +46,13 @@ html, body {
 }
 
 .project-link {
+	text-decoration: none;
+	font-size: 16px;
+	padding: 5px 10px;
+	border-radius: 5px;
+	transition: background-color 0.3s, color 0.3s;
 	background-color: black;
 	color: white;
-	font-size: 16px;
-	border-radius: 3px;
 }
 
 .project-link:hover {
