--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -45,6 +45,21 @@ html, body {
   color: white;
 }
 
+#banner a#profile{
+  color: black;
+  background-color: white;
+  text-decoration: none;
+  font-size: 16px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+#banner a:hover#profile{
+  background-color: black;
+  color: white;
+}
+
 .project-link {
 	text-decoration: none;
 	font-size: 16px;
