--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -100,7 +100,7 @@
 .AddArgBtn {
   color: white;
   font-weight: bold;
-	background: var(--green-light); 
+	background: var(--green); 
 	border: 5px solid var(--green); 
 	border-radius: 15px; 
 	display: inline-block;  
