--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -287,3 +287,9 @@ body {
     width: 50%;
   }
 }
+
+.explore-div {
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+}
+
