--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -309,3 +309,12 @@ body {
   box-shadow: 0 4px 8px rgba(0,0,0,0.15);
 }
 
+.explore-div a {
+  color: var(--green);
+  text-decoration: none;
+  font-size: 12px;
+  margin-left: var(--spacing);
+  padding: 5px 10px;
+  border-radius: var(--radius);
+  transition: background-color var(--transition), color var(--transition);
+}
