--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -297,6 +297,7 @@ body {
   padding: calc(var(--spacing) * 0.75);
   box-shadow: 0 2px 4px rgba(0,0,0,0.08);
   text-align: center;
+  float: left;
 }
 
 .explore-div:hover {
@@ -312,4 +313,8 @@ body {
   padding: 5px 10px;
   border-radius: var(--radius);
   transition: background-color var(--transition), color var(--transition);
+}
+
+#main-page-link {
+  float: center;
 }
