--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -298,6 +298,7 @@ body {
   box-shadow: 0 2px 4px rgba(0,0,0,0.08);
   text-align: center;
   margin: 5px;
+  width: 180px;
 }
 
 .explore-element:hover {
