--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -294,7 +294,7 @@ body {
   background: var(--white);
   border: 1px solid var(--green-light);
   border-radius: var(--radius);
-  padding: calc(var(--spacing));
+  padding: calc(var(--spacing)*2);
   box-shadow: 0 2px 4px rgba(0,0,0,0.08);
   text-align: center; 
   float: left;
