--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -290,14 +290,15 @@ body {
 
 .explore-element {
   justify-content: center; 
-  width: 360px;
+  width: 300px;
   background: var(--white);
   border: 1px solid var(--green-light);
   border-radius: var(--radius);
-  padding: calc(var(--spacing)*2);
+  padding: calc(var(--spacing));
   box-shadow: 0 2px 4px rgba(0,0,0,0.08);
   text-align: center; 
   float: left;
+  margin: 10px;
 }
 
 .explore-element:hover {
