--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -17,7 +17,8 @@
 	padding: 0px; 
 	margin: 0px auto; 
 	white-space: nowrap; 
-	box-sizing: border-box; 
+	box-sizing: border-box;
+  max-width: 500px;
 }
 
 .trunk:hover {
