--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -19,6 +19,12 @@
 	white-space: nowrap; 
 	box-sizing: border-box;
   max-width: 500px;
+  
+  /*overflow: hidden; /* Ensures content stays inside */
+  /*word-wrap: break-word; /* Ensures long words break */
+  /*overflow-wrap: break-word; /* Ensures compatibility */
+  /*box-sizing: border-box; /* Includes padding and border in width calculation */
+
 }
 
 .trunk:hover {
@@ -221,6 +227,9 @@ div.BtnDiv * {
 .Evidence {
 	background: var(--off-white);
   width: 100%;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  box-sizing: border-box;
 }
 
 .Evidence:hover {
