--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -18,7 +18,7 @@
 	margin: 0px auto; 
 	white-space: nowrap; 
 	box-sizing: border-box;
-  max-width: 300px;
+  max-width: 450px;
   
   overflow: hidden;
   word-wrap: break-word;
@@ -58,9 +58,7 @@
     margin: 5px;
     font-size: 18px;
     font-weight: bold;
-    width: auto;
-    min-width: 50px;
-    max-width: 300px;
+    width: 100%;
     overflow-wrap: break-word;
     white-space: normal;
 
@@ -74,9 +72,7 @@
     border: 0px;
     margin: 10px;
     font-size: 14px;
-    width: auto;
-    min-width: 50px;
-    max-width: 300px;
+    width: 100%;
     overflow-wrap: break-word;
     white-space: normal;
 
