--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -61,7 +61,7 @@
     width: 100%;
     overflow-wrap: break-word;
     white-space: normal;
-
+    text-align: center;
     
     font-family: inherit;
     line-height: 1.2; 
@@ -72,6 +72,7 @@
     border: 0px;
     margin: 10px;
     font-size: 14px;
+    text-align: justify;
     width: 100%;
     overflow-wrap: break-word;
     white-space: normal;
